<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.royalniks.courseregistration.DisplayData">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_weight="2"
        android:orientation="vertical"
        android:screenOrientation="portrait">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/dfname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textCapWords"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/hint_firstname"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/input_register_hint" />

                <TextView
                    android:id="@+id/dlname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textCapWords"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/hint_lastname"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/input_register_hint" />

                <TextView
                    android:id="@+id/dmatric"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:editable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/hint_matric_no"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint"
                    android:visibility="visible"
                    tools:clickable="false" />


                <TextView
                    android:id="@+id/dfaculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@string/hint_fac"
                    android:textColor="@color/bg_register"
                    android:textColorHint="@color/input_register_hint" />


                <TextView
                    android:id="@+id/ddepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/hint_dept"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />

                <TextView
                    android:id="@+id/dcourse1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@string/hint_c1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />


                <TextView
                    android:id="@+id/dcourse2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@string/hint_c2"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />


                <TextView
                    android:id="@+id/dcourse3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="13dp"
                    android:text="@string/hint_c3"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />

                <!--  <EditText
          android:id="@+id/course4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:background="@color/input_register_bg"
          android:hint="@string/Course1"
          android:inputType="text"
          android:padding="10dp"

          android:textColor="@color/input_register"
          android:textColorHint="@color/input_register_hint" /> -->
                <!-- Login Button -->

                <!-- Link to Login Screen -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_toRightOf="@+id/dform"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_firstname"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_lastname"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/matric"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:editable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_matric_no"
                    android:inputType="none"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint"
                    android:visibility="visible"
                    tools:clickable="false" />


                <EditText
                    android:id="@+id/faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/faculty"
                    android:inputType="text"
                    android:padding="10dp"

                    android:textColor="@color/bg_register"
                    android:textColorHint="@color/input_register_hint" />


                <EditText
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/department"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/course1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/Course1"
                    android:inputType="text"
                    android:padding="10dp"

                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />


                <EditText
                    android:id="@+id/course2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/Course2"
                    android:inputType="text"
                    android:padding="10dp"

                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />


                <EditText
                    android:id="@+id/course3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/Course3"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/input_register_hint" />

                <!--  <EditText
              android:id="@+id/course4"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:background="@color/input_register_bg"
              android:hint="@string/Course1"
              android:inputType="text"
              android:padding="10dp"

              android:textColor="@color/input_register"
              android:textColorHint="@color/input_register_hint" /> -->
                <!-- Login Button -->

                <!-- Link to Login Screen -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/input_register"
            android:onClick="onRegisterClick"
            android:text="@string/btn_logout"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/bg_login"
            android:onClick="onEdit"
            android:text="@string/save_text"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
