<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.royalniks.courseregistration.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/black" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:screenOrientation="portrait">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="68dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="@dimen/login_padding">


            <!--<ProgressBar-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:id="@+id/pbHeaderProgress"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:visibility="invisible">-->
            <!--</ProgressBar>-->


            <EditText
                android:id="@+id/txtMatNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_matric_no"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/btn_login_bg"
                android:onClick="OnLogIn"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login" />

            <!-- Link to Login Screen -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/btn_link_to_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="100dp"
                android:background="@null"
                android:text="@string/btn_register_sign"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="22dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
